Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.2.0
-
Fix Version/s: 5.3.0 RC1
-
Component/s: Quick: Controls 1
-
Labels:None
-
Platform/s:
-
Commits:eccf1c51a68cce9f1642f66b594cf12b061dbc2b 7e071cebaa731b3f635ef515627985e27726aba1
Description
In Android, using the popular SwiftKey keyboard it is not possible to input text in a TextField.
Attachments
Issue Links
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
- relates to
-
QTBUG-37511 Android: Software keyboard problems
-
- Closed
-